Readme + fixed json

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,1 +1,1 @@
-[{"id":6,"text":"test","completed":false},{"id":7,"text":"dfsd","completed":true},{"id":8,"text":"fdsf","completed":false}]
+[{"id":0,"text":"Feed the cat","completed":true},{"id":1,"text":"Go to the gym","completed":false},{"id":2,"text":"Water the plants","completed":false}]
